--- a/static/landing.css
+++ b/static/landing.css
@@ -1,7 +1,8 @@
 body{
     min-height: 100vh;
     display: grid;
-    grid-template-rows: auto 1fr 1fr auto;
+    grid-template-rows: auto;
+    margin: 0%;
 }
 *{
     font-family: 'Heebo', sans-serif;
@@ -80,21 +81,17 @@ header {
 .banner-page{
     /* border: 1px solid hotpink; */
     display: grid;
-    grid-template-columns: 53% 43%;
+    grid-template-columns: 53% 45%;
     column-gap: 6%;
     margin: 2% 4% 1% 8%;
+    border-bottom: 1px solid rgb(173, 173, 173);
 }
 
 /* level 1.1 */
 .about-container{
     /* border: 1px solid green; */
-    padding-top: 5%;
     display: grid;
-    grid-template-rows: 50% 13% 10% 9% 9%;
-}
-
-.checkerboard{
-    /* border: 1px solid red; */
+    grid-template-rows: 45% 13% 8% 7% 7%;
 }
 
 .main-writing{
@@ -113,9 +110,6 @@ header {
     display: grid;
     grid-template-columns: 17% 5% 30% 5% 20%;
 
-}
-.existing-user-container{
-    /* border: 1px solid purple; */
 }
 
 /* level 1.2 */
@@ -212,9 +206,6 @@ header {
     grid-template-rows: 60% 30% 30%;
 }
 
-.footer-text-container{
-    /* border: 1px solid red; */
-}
 .get-started-container{
     /* border: 1px solid green; */
     display: grid;
